--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "classnames": "^2.3.1",
+    "emoji-picker-react": "^3.5.1",
     "i18next": "^21.6.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
