--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.3.1",
     "emoji-picker-react": "^3.5.1",
     "i18next": "^21.6.14",
+    "immer": "^9.0.15",
     "lodash-es": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
