--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash-es": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
     "sass": "^1.51.0",
@@ -54,6 +55,7 @@
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.6",
+    "@types/react-lottie": "^1.2.6",
     "prettier": "^2.6.2",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
