styling of start

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,6 +4,6 @@
   "icons": [],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#588b8b",
-  "background_color": "#588b8b"
+  "theme_color": "#314160",
+  "background_color": "#314160"
 }
