--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-lottie": "^1.2.3",
-    "react-router-dom": "6",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "sass": "^1.51.0",
     "socket.io-client": "^4.5.1",
