--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "emoji-picker-react": "^3.5.1",
     "immer": "^9.0.15",
     "nanoid": "^4.0.0",
+    "newrelic": "^9.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
