--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "license": "MIT",
   "engines": {
-    "node": "16.x"
+    "node": "18.x"
   },
   "dependencies": {
     "classnames": "^2.3.1",
@@ -18,7 +18,7 @@
     "react-hot-toast": "^2.2.0",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "sass": "^1.51.0",
     "socket.io-client": "^4.5.1",
     "typescript": "^4.1.2",
